# c-getpass-in-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
c/: build.sh  my_lib.c
examples/: quick_example.rs
src/: lib.rs
